CCT 1.0.4-M3 Release notes: Improvements and changes: * Overall optimization for the GUI and calibration modules. ** Calibrations should take ~50% less memory on average and run %10-20 faster. ** The GUI panels should also load and refresh considerably faster as well. * Group velocities used for selection criteria during calibration are now configurable. See the schema folder for examples of the new JSON block and the Parameters tab for the new table display. * Data can now be filtered from use in calibration ** Data selection options: *** From the data tab check the 'used' checkbox or multi-select and right click for a context menu to include/exclude more records at once *** From shape, path, and site plots you can right click a plotted point and exclude the data that was used to generate that plot point (use with care as you can exclude more data than you expect this way, especially in path!) *** From the map you can right click a station or event and include/exclude all records that match either that station or event * Map will now auto (re)center to the data loaded if you tap the 'Map' button while the map is already open (this will also bring the map back to the front if its behind other windows). * Measured and reference event information in the Site correction tab have been consolidated into a single Mw results table. * The combined Mw table also includes the number of measurements used to make the measurement for the measured mw fields. * The Mw results tab now also includes three plots for: ** Reference vs. Measured Mw ** Reference vs. Measured Stress ** Standard deviation of final calibrated measurement by event and frequency. *** Sd plot is color coded by # of station records in the measurement * The measured-mw json output for calibration will now include the reference event if there was one for that evid. * We now remove auto-pick indicator AP picks on waveforms if a human moves the F marker. By moving the F marker this tells the auto-picker that the wa